Fix scrolling issue; customize scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,5 +86,22 @@
   }
   body {
     @apply bg-background text-foreground;
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      background-color: rgb(44, 43, 43, 0.1);
+    }
+
+    ::-webkit-scrollbar {
+      width: 10px;
+      background-color: rgba(10, 10, 10, 0.1);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 8px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: #1a1a1ace;
+    }
   }
 }
